--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 *.fdb_latexmk
 *.fls
 *.glg
+*.xopp
 *.glo
 *.gls
 *.idx
@@ -52,5 +53,4 @@ PDFs/
 figures/gumpy.jpeg
 Results/
 *.png
-Thesis/proofread.xopp
 Thesis/wordcount.html
